feat(*): 重构结构，引入测试工具

--- a/package.json
+++ b/package.json
@@ -4,9 +4,9 @@
   "description": "as backend work for react-learn",
   "main": "index.js",
   "scripts": {
-    "start": "node index.js",
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "nodemon index.js"
+    "start": "NODE_ENV=production node index.js",
+    "test": "NODE_ENV=test jest --verbose --runInBand",
+    "dev": "NODE_ENV=development nodemon index.js"
   },
   "repository": {
     "type": "git",
@@ -23,9 +23,16 @@
   "homepage": "https://github.com/jonnzer/react-learn-server#readme",
   "dependencies": {
     "cors": "^2.8.5",
-    "express": "^3.4.4"
+    "cross-env": "^7.0.3",
+    "dotenv": "^16.0.3",
+    "express": "^4.18.2",
+    "mongoose": "^7.0.2"
   },
   "devDependencies": {
+    "jest": "^29.5.0",
     "nodemon": "^2.0.20"
+  },
+  "jest": {
+    "testEnvironment": "node"
   }
 }
