--- a/package.json
+++ b/package.json
@@ -4,9 +4,9 @@
   "description": "as backend work for react-learn",
   "main": "index.js",
   "scripts": {
-    "start": "NODE_ENV=production node index.js",
-    "test": "NODE_ENV=test jest --verbose --runInBand",
-    "dev": "NODE_ENV=development nodemon index.js"
+    "start": "cross-env NODE_ENV=production node index.js",
+    "test": "cross-env NODE_ENV=test jest --verbose --runInBand --forceExit",
+    "dev": "cross-env NODE_ENV=development nodemon index.js"
   },
   "repository": {
     "type": "git",
@@ -30,7 +30,8 @@
   },
   "devDependencies": {
     "jest": "^29.5.0",
-    "nodemon": "^2.0.20"
+    "nodemon": "^2.0.20",
+    "supertest": "^6.3.3"
   },
   "jest": {
     "testEnvironment": "node"
